<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <ImageView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:src="@drawable/splash_background"
        android:scaleType="fitXY"
        android:id="@+id/splash_background"
        android:transitionName="@string/square_background"
        android:layout_above="@+id/code_icon"

        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/splash_boxes"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="-255dp"
        android:transitionName="@string/square_box"
        android:layout_marginRight="-150dp"
        android:layout_above="@+id/code_icon"
        android:id="@id/splash_box"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/splash_phone"
        android:paddingRight="80dp"
        android:layout_centerHorizontal="true"
        android:transitionName="@string/square_mobile"
        android:id="@+id/splash_mobile"
        android:paddingTop="60dp"
        android:paddingBottom="40dp"
        android:layout_marginTop="-180dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/toolbar_box"
        android:layout_marginBottom="30dp"
        android:transitionName="@string/square_login_text"
        android:layout_above="@+id/code_icon"

        >


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_btn"
            android:layout_weight="1"
            android:id="@+id/login_btn"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/login_with_number_btn"
            android:id="@+id/login_phone_btn"/>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="16dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/sigin_button_background"
        android:weightSum="10"
        android:id="@+id/signin_btn"
        android:transitionName="@string/square_signin_btn"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:id="@+id/english_text"
            android:src="@drawable/signin_english_text"
            android:duplicateParentState="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:id="@+id/arabic_text"
            android:src="@drawable/signin_arabic_text"
            android:duplicateParentState="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"


            />

    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signin_btn"
        android:text="Forgot Password?"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/forgot_password"
        android:textColor="@color/dialog_box_text_color"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password_txt"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:id="@+id/email_txt"
        app:errorEnabled="true"
        android:transitionGroup="true"

        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="Email/Username"
            android:theme="@style/TextLabel"

            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/forgot_password"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:id="@+id/password_txt"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        android:transitionGroup="true"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="Password"
            android:theme="@style/TextLabel"
            />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please enter the number we can send verification code to"
        android:id="@+id/code_text"
        android:layout_above="@+id/email_txt"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/primary_text_color"
        android:gravity="center"
        android:textSize="18dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/code_text"
        android:src="@drawable/login_icon"
        android:id="@+id/code_icon"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"/>



</RelativeLayout>