<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView

        android:id="@+id/splash_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/code_icon"
        android:layout_marginBottom="20dp"
        android:scaleType="fitXY"
        android:src="@drawable/splash_background"
        android:transitionName="@string/square_background"

        />

    <ImageView
        android:id="@+id/splash_box"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/code_icon"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="-200dp"
        android:layout_marginTop="-200dp"
        android:src="@drawable/splash_boxes"
        android:transitionName="@string/square_box" />

    <ImageView
        android:id="@+id/splash_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-220dp"
        android:paddingBottom="40dp"
        android:paddingRight="80dp"
        android:paddingTop="60dp"
        android:src="@drawable/splash_phone"
        android:transitionName="@string/square_mobile" />

    <LinearLayout
        android:id="@+id/toolbar_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/code_icon"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        android:transitionName="@string/square_login_text"

        >

        <ImageView
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/login_btn" />

        <ImageView
            android:id="@+id/login_phone_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/login_with_number_btn" />
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/signin_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/sigin_button_background"
        android:orientation="horizontal"
        android:transitionName="@string/square_signin_btn"
        android:weightSum="10">

        <TextView
            android:id="@+id/english_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_weight="5"
            android:duplicateParentState="true"
            android:text="SUBMIT CODE"
            android:textColor="@color/nav_text_color" />

        <TextView
            android:id="@+id/arabic_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:layout_weight="5"
            android:duplicateParentState="true"
            android:text="إرسال الكود"
            android:textColor="@color/nav_text_color"

            />

    </RelativeLayout>


    <android.support.design.widget.TextInputLayout

        android:id="@+id/verification_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signin_btn"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:transitionGroup="true"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/verification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter verification code"
            android:inputType="number"
            android:theme="@style/TextLabel"
            android:maxLength="6"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_above="@+id/verification_code"
        android:id="@+id/send_code_btn"
        android:orientation="horizontal"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/return_by_customer_background">

       <ImageView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@drawable/send_code_text"
           android:layout_gravity="center_vertical"
           android:layout_marginLeft="15dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_number_icon"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/phone_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/send_code_btn"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:orientation="horizontal">

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="8dp"
            app:ccp_countryAutoDetectionPref="SIM_NETWORK_LOCALE"
            app:ccp_countryPreference="pk,as,us"
            app:ccp_defaultNameCode="pk"
            app:ccp_hintExampleNumber="true" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phone_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:transitionGroup="true"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Phone number"
                android:inputType="number"
                android:theme="@style/TextLabel" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please enter the number we can send verification code to"
        android:id="@+id/code_text"
        android:layout_above="@+id/phone_box"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/primary_text_color"
        android:gravity="center"
        android:textSize="18dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/code_text"
        android:src="@drawable/code_icon"
        android:id="@+id/code_icon"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"/>


</RelativeLayout>